# nanoprintf

./: .clangd  .editorconfig  .gitignore  .gitmodules  .ycm_extra_conf.py  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  appveyor.yml  b  build.py  cmake.sha256sum  nanoprintf.h  notes.txt  npf_exh_gen.py  npf_fuzz_gen.py  pyrightconfig.json  ruff.toml  tests_a.c  tests_g.c  todo.txt  ub_tests.c
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  presubmit.yml  release.yml  update-size-report.yml
compilation_tests/: nanoprintf_compilation_test_cpp.cpp
conformance_tests/: main.cpp  test_conformance.cpp
examples/use_npf_directly/: main.cpp  your_project_nanoprintf.cc  your_project_nanoprintf.cpp  your_project_nanoprintf.h
examples/wrap_npf/: main.cc  your_project_printf.cc  your_project_printf.cpp  your_project_printf.h
examples/wrap_npf_float/: main.c  your_project_printf.c  your_project_printf.h
scripts/: cmake.sha256sum  get_cmake.sh  get_ninja.sh  ninja.sha256sum
tests/: compilation_c.c  conformance.c  conformance.cc  doctest_main.cc  gen_tests.py  include_multiple.c  npf_doctest.h  paland.cc  size-report.py  size_report.c  size_report.py  static_main.c  static_nanoprintf.c  test_harness.h  unit_bin_len.cc  unit_binary.cc  unit_buffer_overrun.cc  unit_bufputc.cc  unit_fsplit_abs.cc  unit_ftoa_nan.cc  unit_ftoa_rev.cc  unit_ftoa_rev_08.cc  unit_ftoa_rev_16.cc  unit_ftoa_rev_32.cc  unit_ftoa_rev_64.cc  unit_itoa_rev.cc  unit_nanoprintf.c  unit_nanoprintf.h  unit_parse_format_spec.cc  unit_snprintf.cc  unit_snprintf_safe_empty.cc  unit_snprintf_safe_trim.cc  unit_utoa_rev.cc  unit_utoa_rev_divfree.cc  unit_vpprintf.cc
unit_tests/: CMakeLists.txt  main.cc  nanoprintf.cc  nanoprintf_in_unit_tests.h  test_bufputc.cc  test_bufputc.cpp  test_conformance.cc  test_fsplit_abs.cc  test_fsplit_abs.cpp  test_ftoa.cc  test_ftoa_rev.cc  test_ftoa_rev.cpp  test_itoa_rev.cpp  test_nanoprintf.cc  test_parse_format_spec.cc  test_parse_format_spec.cpp  test_ptoa_rev.cpp  test_snprintf.cc  test_snprintf.cpp  test_utoa_rev.cc  test_utoa_rev.cpp  test_vpprintf.cc  test_vpprintf.cpp
